# hydra

./: .dockerignore  .gitignore  AGENTS.md  ANSWER_3.md  Cargo.toml  LICENSE  PROMPT_10_VALIDATE_COMPUTE_ROUTING_AND_PONDERING.md  PROMPT_11_VALIDATE_ACTION_SUFFICIENT_WORLD_COMPRESSION.md  PROMPT_12_VALIDATE_POSTERIOR_CONSENSUS_AND_REGIME_MODELS.md  PROMPT_13_AUDIT_HYDRA_LONG_RUN_TRAINING_RISKS.md  PROMPT_14_VALIDATE_HAND_EV_AND_ENDGAME_EXACTIFICATION.md  PROMPT_15_VALIDATE_ADVANCED_TARGET_PROVENANCE_AND_PUBLIC_TEACHERS.md  PROMPT_16_VALIDATE_ROLLOUT_DISTILLATION_GATES_AND_FALLBACKS.md  PROMPT_5_FOLLOWUP_COMPUTE_ROUTER_AND_ROBUSTNESS.md  PROMPT_6_FOLLOWUP_DEBC_AR.md  PROMPT_7_FRESH_CONTEXT_CROSS_FIELD_BREAKTHROUGH.md  PROMPT_8_FRESH_CONTEXT_INVENT_NEW_TECHNIQUES.md  PROMPT_9_VALIDATE_CONSERVATIVE_EXIT_AND_DELTA_Q.md  PROMPT_FRESH_CONTEXT_CROSS_FIELD_BREAKTHROUGH.md  PROMPT_FRESH_CONTEXT_INVENT_NEW_TECHNIQUES.md  README.md  agent_5-followup.md  agent_6-followup.md  agent_7.md  agent_7new.md  agent_7new1.md  agent_8.md  agent_8new.md  agent_8new1.md  nextest.toml  prompt-5.md  prompt-6.md
.cargo/: config.toml
.claude/: settings.local.json
.sisyphus/: ralph-loop.local.md
agent_answers/: ANSWER_1-1.md  ANSWER_1.md  ANSWER_3-1.md
crates/hydra-core/: LICENSE  README.md
crates/hydra-engine/: .cargo_vcs_info.json  README.md
crates/hydra-train/: Cargo.toml
crates/hydra-train/src/: bridge_import.rs  config.rs  heads.rs  inference.rs  league.rs  lib.rs  model.rs  preflight.rs  selfplay.rs
crates/hydra-train/src/data/: mjai_loader.rs  pipeline.rs  sample.rs
crates/hydra-train/src/teacher/: belief.rs
crates/hydra-train/src/training/: bc.rs  delta_q_validation.rs  exit.rs  exit_validation.rs  gae.rs  head_gates.rs  live_exit.rs  losses.rs  mod.rs  orchestrator.rs  replay_exit.rs  rl.rs
crates/hydra-train/tests/: integration_pipeline.rs
docker/train/: Dockerfile  README.md  bc_config.json  bc_config.yaml  bc_example_2048.yaml  bc_example_256.json  bc_example_256.yaml  bc_portable_5070.yaml  bc_preflight_test.yaml  bc_probe_5070.yaml  rl_preflight_smoke_docker.yaml  rl_preflight_test.yaml  rl_smoke_16games.yaml  rl_smoke_8games.yaml  rl_smoke_config.yaml  rl_smoke_cpu.yaml  rl_smoke_docker.yaml
docs/: GAME_ENGINE.md
hydra-core/: Cargo.toml  README.md
hydra-core/benches/: ct_smc_bench.rs  simulator_bench.rs
hydra-core/examples/: bench_throughput.rs
hydra-core/src/: action.rs  afbs.rs  arena.rs  batch_encoder.rs  bridge.rs  ct_smc.rs  encoder.rs  endgame.rs  game_loop.rs  hand_ev.rs  lib.rs  robust_opponent.rs  safety.rs  seeding.rs  shanten_batch.rs  simulator.rs  sinkhorn.rs  tile.rs
hydra-core/tests/: golden_encoder.rs  mjai_replay.rs  proptest_invariants.rs
hydra-engine/: Cargo.toml  README.md
hydra-engine/src/: action.rs  hand_evaluator.rs  hand_evaluator_3p.rs  mjai_event.rs  observation_ref.rs  parser.rs  rule.rs  score.rs  shanten.rs  tests.rs  types.rs  yaku.rs  yaku_3p.rs  yaku_checker.rs
hydra-engine/src/observation/: encode.rs  mod.rs  python.rs
hydra-engine/src/observation_3p/: encode.rs  mod.rs  python.rs
hydra-engine/src/replay/: mjsoul_replay.rs  mod.rs
hydra-engine/src/state/: event_handler.rs  legal_actions.rs  mod.rs  player.rs  wall.rs
hydra-engine/src/state_3p/: event_handler.rs  legal_actions.rs  mod.rs  player.rs  sanma.rs  wall.rs
hydra-py/: Cargo.toml  pyproject.toml
hydra-py/python/hydra/: __init__.py
hydra-py/src/: env.rs  lib.rs
hydra-train/: Cargo.toml
hydra-train/src/: backbone.rs  config.rs  eval.rs  heads.rs  inference.rs  league.rs  lib.rs  model.rs  saf.rs  selfplay.rs
hydra-train/src/data/: augment.rs  mjai_loader.rs  mod.rs  pipeline.rs  sample.rs
hydra-train/src/teacher/: belief.rs  mod.rs
hydra-train/src/training/: ach.rs  bc.rs  distill.rs  drda.rs  exit.rs  exit_validation.rs  gae.rs  head_gates.rs  live_exit.rs  losses.rs  mod.rs  orchestrator.rs  rl.rs
hydra-train/tests/: integration_pipeline.rs
output/: best_model.meta.json  step_log.jsonl
output/tb/: events.out.tfevents.1773225531.d348179e52dc.54.1  events.out.tfevents.1773226887.6a925c54bb0e.53.1  events.out.tfevents.1773227548.be43d909e942.1.1  events.out.tfevents.1773227818.6d8845f0fa80.1.1  events.out.tfevents.1773228514.9876fdd888be.1.1  events.out.tfevents.1773229793.abd137ef2fd0.1.1  events.out.tfevents.1773231091.b322430b1d4c.1.1  events.out.tfevents.1773231221.de758acbc25d.1.1  events.out.tfevents.1773260389.2b207df43b9b.1.1  events.out.tfevents.1773260724.e7909d9e7d34.1.1  events.out.tfevents.1773263905.82303304f0ab.1.1  events.out.tfevents.1773264017.309cc393c1bf.1.1  events.out.tfevents.1773264806.d7789f612a65.1.1
plan/: SIMULATOR_PLAN.md
python/hydra_phase0_tpu/: pyproject.toml
python/hydra_phase0_tpu/hydra_phase0_tpu/: augment.py  checkpoints.py  config.py  dataset.py  eval_step.py  export_weights.py  logging.py  losses.py  model.py  parity_fixture.py  train.py  train_state.py  train_step.py
python/hydra_phase0_tpu/hydra_phase0_tpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/hydra_phase0_tpu/tests/: test_augment.py  test_checkpoints.py  test_config.py  test_dataset.py  test_export_weights.py  test_model.py  test_train.py
research/: ABLATION_PLAN.md  AUDIT_LOG.md  BUILD_AGENT_PROMPT.md  CHECKPOINTING.md  COMMUNITY_INSIGHTS.md  COMPUTE_FEASIBILITY.md  CRITIQUE_AGENT_FINAL.md  CRITIQUE_AGENT_PROMPT.md  CRITIQUE_AGENT_PROMPT_V2.md  CRITIQUE_AGENT_PROMPT_V3.md  CRITIQUE_AGENT_TRULY_FINAL.md  ECOSYSTEM.md  ENGINE_BENCHMARKS.md  ENGINE_CLEANUP_PLAN.md  FINAL_SIGNOFF_CRITIQUE.md  HYDRA_SPEC.md  INFRASTRUCTURE.md  MATH_VERIFICATION_PROMPT.md  MORL_PLACEMENT.md  MORTAL_ANALYSIS.md  OPPONENT_MODELING.md  PROPOSAL_EVOLUTION.md  REFERENCES.md  RESEARCH_LANDSCAPE.md  RESEARCH_LOG.md  REWARD_DESIGN.md  SCRATCHBOOK.md  SEARCH_PGOI.md  SEEDING.md  TESTING.md  TRAINING.md  opponent_modeling_research.md
scripts/: deploy-so.sh  encrypt_archives.py  generate_prompt.py  mortal-vocnet-rename.patch  patch_so_strings.py  restructure-vocnet.sh  rustc-wrapper.sh  setup-gpu-droplet.sh
(+173 files in other folders)
