[package]
name = "hydra-py"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Python bindings for the Hydra Riichi Mahjong game engine"

[lib]
name = "_hydra"
crate-type = ["cdylib"]

[dependencies]
hydra-core = { path = "../hydra-core" }
riichienv-core = "0.3"
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
serde_json = "1.0"
