[package]
name = "hydra-train"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
description = "Hydra Riichi Mahjong AI - training pipeline (SE-ResNet, ACH, ExIt)"
repository = "https://github.com/hydra-mahjong/hydra"

[lib]
crate-type = ["rlib"]

[dependencies]
hydra-core = { path = "../hydra-core" }
burn = { version = "0.20", features = ["train", "tch"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
burn = { version = "0.20", features = ["ndarray"] }
