[package]
name = "hydra-train"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Hydra Riichi Mahjong AI - training pipeline (SE-ResNet, ACH, ExIt)"
repository = "https://github.com/hydra-mahjong/hydra"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "mjai_audit"
path = "src/bin/mjai_audit.rs"

[[bin]]
name = "recompress"
path = "src/bin/recompress.rs"

[[bin]]
name = "export_bc_phase0"
path = "src/bin/export_bc_phase0.rs"

[dependencies]
hydra-core = { path = "../hydra-core" }
burn = { version = "0.20", features = ["train", "tch"] }
burn-store = { version = "0.20", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
flate2 = "1.1.9"
serde_json = "1.0.149"
serde_yaml = "0.9"
riichienv-core = { version = "0.3.4", path = "../hydra-engine", package = "hydra-engine" }
rayon = "1.10"
indicatif = "0.17"
tboard = "0.1.1"
colored = "3"
tar = "0.4"
zstd = "0.13"
ctrlc = "3.4"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
burn = { version = "0.20", features = ["ndarray"] }
rand = "0.9"
rand_chacha = "0.9"
